# recipEZ

./: .dockerignore  .gitignore  credientials.json  database.py  dbcheck.py  docker-compose.yaml  googlecalendar.py  kagglepandas.py  main.py  pyproject.toml  tables.py
